# openrag-docling

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-multiarch.yml  dependency-audit.yml  deploy-docs-draft.yml  deploy-gh-pages.yml  lint-frontend.yml  manual-docker-publish.yml  nightly-build.yml  publish-mcp.yml  publish-sdk-python.yml  test-e2e.yml  test-integration.yml  update-uv-lock.yml
docs/: docusaurus.config.js
docs/docs/get-started/: what-is-openrag.mdx
docs/src/css/: custom.css
frontend/: biome.json  knip.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  page.tsx  providers.tsx
frontend/app/connectors/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: chat-renderer.tsx  confirmation-dialog.tsx  delete-confirmation-dialog.tsx  filter-icon-popover.tsx  knowledge-actions-dropdown.tsx  knowledge-dropdown.tsx  knowledge-filter-list.tsx  layout-wrapper.tsx  navigation.tsx  provider-health-banner.tsx  task-notification-menu.tsx  theme-switcher-buttons.tsx
frontend/components/AgGrid/: registerAgGridModules.ts
frontend/components/cloud-picker/: file-list.tsx  index.ts  onedrive-v8-handler.ts  picker-header.tsx  (+3 more)
frontend/contexts/: auth-context.tsx  chat-context.tsx  knowledge-filter-context.tsx  task-context.tsx
frontend/hooks/: useChatStreaming.ts
frontend/lib/: debounce.ts  format-files-to-delete.tsx  upload-utils.ts  utils.ts
src/: main.py
src/api/: connectors.py
src/config/: config_manager.py
src/connectors/: connection_manager.py
src/services/: langflow_file_service.py
src/tui/: main.py
tests/unit/: test_settings_refresh_endpoint.py
(+47 files in other folders)
