[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrag"
version = "0.3.1"
description = "OpenRAG is a comprehensive Retrieval-Augmented Generation platform that enables intelligent document search and AI-powered conversations."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "agentd>=0.2.2",
    "aiofiles>=24.1.0",
    "cryptography>=45.0.6",
    "google-api-python-client>=2.143.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "msal>=1.29.0",
    "httpx>=0.27.0",
    "opensearch-py[async]>=3.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.20",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "boto3>=1.35.0",
    "psutil>=7.0.0",
    "rich>=13.0.0",
    "textual>=0.45.0",
    "python-dotenv>=1.0.0",
    "textual-fspicker>=0.6.0",
    "structlog>=25.4.0",
    "zxcvbn>=4.5.0"
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.21.0", "pytest-mock>=3.12.0", "pytest-cov>=4.0.0", "openrag-sdk"]

[project.scripts]
openrag = "tui.main:run_tui"

[tool.uv]
package = true

[tool.uv.sources]
openrag-sdk = {path = "sdks/python", editable = true}


